<resources>
    <string name="app_name">HBB v:1.0</string>
    <string name="action_settings">Settings</string>
    <string name="hint_email">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_signup">Sign up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="contact">Contact</string>
    <string name="health_facility">Health Facility</string>
    <string name="gender">Gender</string>
    <string name="training_mode">Training Mode</string>
    <string name="simulation_mode">Simulation Mode</string>
    <string name="help">Help</string>
    <string name="action_logout">Logout</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">TRAINING</string>
    <string name="backdrop_subtitle">You Entered Training mode</string>
    <string name="skills">Skills</string>
    <string name="preperation_for_birth">1). Preperation for Birth</string>
    <string name="routine_care">2). Routine Care</string>
    <string name="golden_minutes">Golden Minutes</string>
    <string name="golden_minutes_with_ventilation">3). Golden Minutes with ventilation</string>
    <string name="golden_minutes_without_ventilation">4). Golden minutes without ventilation</string>
    <string name="ventilation_with_slow_or_fast_heart_rate">5). Ventilation with slow or fast Heart Rate</string>
    <string name="hand_washing">1) Hand Washing</string>
    <string name="testing_equipments">2) Testing Equipments</string>
    <string name="combine_video">3) Combined Video</string>
    <string name="drying_thouroughly">1) Drying Thouroughly</string>
    <string name="clamping_and_cutting_card">2) Clamping and Cutting Card</string>
    <string name="sunctioning">1) Sunctioning</string>
    <string name="stimulation">2) Stimulation</string>
    <string name="key_steps">1) Key Steps</string>
    <string name="sub_footer"> Helping Babies Breath (HBB) </string>
    <string name="app_version">VERSION 1.0</string>
    <string name="select">Select</string>
    <string name="alone">Alone</string>
    <string name="rater">Rater</string>
    <string name="random_care">Random Care</string>
    <string name="baby_being_born">a) Baby Being Born</string>
    <string name="crying_and_breathing">b) Crying and Breathing</string>
    <string name="breathing_baby">c) Breathing Baby</string>
    <string name="extit_end">Exit/ End</string>
    <string name="check_list">Check List</string>
    <string name="did_you_dry_the_baby">1) Did You Dry the Baby?</string>
    <string name="d">D</string>
    <string name="nd">ND</string>
    <string name="ok">Ok</string>
    <string name="baby_is_breathing">d) Baby is Breathing</string>
    <string name="baby_not_breathing">c) Baby not Breathing</string>
    <string name="baby_not_crying">b) Baby not Crying</string>
    <string name="baby_is_born">a) Baby is Born</string>
    <string name="done">Done</string>
    <string name="not_done">Not Done</string>
    <string name="removes_wet_clothes">ii) Removes wet Clothes</string>
    <string name="recognises_baby_is_not_crying">iii) Recognises Baby is not Crying</string>
    <string name="similates_baby_by_rubbing">iv) Simulates Baby by Rubbing</string>
    <string name="recognises_baby_is_not_breathing">v) Recognises Baby is not Breathing</string>
    <string name="dries_throughly">i) Dries Throughly</string>
    <string name="cuts_cord_moves_to_area_for_ventilation_or_positions_by_mother_for_ventilation">vi) Cuts Cord and Moves to area for Ventilation OR positions by Mothers for ventilation</string>
    <string name="ventilation_with_bag_and_mask_within_the_golden_minute">vii) Ventilation with Bag and Mask within the Golden Minute</string>
    <string name="calls_for_help">viii) Calls for Help</string>
    <string name="continues_ventilation">ix) Continues Ventilation</string>
    <string name="hint_new_email">New Email ID</string>
    <string name="prompt_password">Password</string>
    <string name="new_pass">New Password</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send Instructions</string>
    <string name="btn_remove">Remove</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset Email</string>
    <string name="remove_user">Remove User</string>
    <string name="btn_sign_out">Sign out</string>
    <string name="type_of_facility">Type of Facility</string>
    <string name="hospital">Hospital</string>
    <string name="health_centeriv">Health Center IV</string>
    <string name="health_centeriii">Health Center III</string>
    <string name="dispensary">Dispensary</string>
    <string name="government">Government</string>
    <string name="facility_ownership">Facility Ownership</string>
    <string name="pnfp">PNFP</string>
    <string name="pfp">PFP</string>
    <string name="other">Other</string>
    <string name="nurse">Nurse</string>
    <string name="health_cadre">Health Cadre</string>
    <string name="clinical_officer">Clinical Officer</string>
    <string name="medical_officer">Medical Officer</string>
    <string name="pediatrician">Pediatrician</string>
    <string name="district">District</string>
    <string name="create_account">Create Account</string>
    <string name="signup">Sign up</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="forgot_password_msg">Forgot Password?</string>
    <string name="finish">Finish</string>
    <string name="finish_creating">Finish Creating</string>
    <string name="forgot_password_msg_">We are sorry to here you have forgotten your password. however you can reset a new one by sending us using valid email address. Thank</string>
    <string name="hint_email_">Email address</string>
    <string name="quizzes">Quizzes/ Knowledge Check</string>
    <string name="scoreboard">Scoreboard/ Dashboard</string>
    <string name="dr">DR</string>
    <string name="dont_remember">Don\'t Remember</string>
    <string name="submit">Submit</string>
    <string name="bag_and_mask_ventilation">1) Bag and Mark Ventilation</string>
    <string name="improving_ventilation">2) Improving Ventilation.</string>
    <string name="disinfecting_and_testing_equipment_after_every_use">6). Disinfecting and Testing equipment after every use.</string>
    <string name="are_you">Are You..</string>
    <string name="ateam">a Team</string>
    <string name="register_new">Register new Member.</string>
    <string name="health_facility_name">Health Facility name</string>
    <string name="preparation_for_birth">Preparation for Birth</string>
    <string name="identifies_a_helper_and_reviews_the_emergency_plans">1) Identifies a helper and reviews the emergency plans</string>
    <string name="prepares_area_for_delivery">2) Prepares area for delivery</string>
    <string name="washe_hands">3) Washes hands</string>
    <string name="prepares_an_area_for_ventilation">4) Prepares an area for ventilation</string>
    <string name="assembles_disinfected_equipment_and_supplies">5) Assembles disinfected equipment and supplies</string>
    <string name="test_the_ventilation_bag_mask_and_sunction_device">6) Test the ventilation bag, mask and sunction device</string>
    <string name="prepare_a_uterotonic_for_the_mother">7) Prepare a uterotonic for the mother</string>
    <string name="recognises_crying">2) Recognises Crying</string>
    <string name="keeps_warm">3) Keeps warm</string>
    <string name="checks_breathing">4) Checks breathing</string>
    <string name="clamps_or_ties_and_cuts_the_umblical_cord">5) Clamps or Ties and cuts the umblical cord</string>
    <string name="position_on_mothers_chest_to_encourage_breast_feeding">6) Position on mother\'s chest to encourage breast feeding</string>
    <string name="continue_with_essential_newborn_care_identify_the_body_and_complete_the_birth_record">7) Continue with essential newborn care, identify the body and complete the birth record</string>
    <string name="continued_ventilation_with_normal_or_slow_heart_rate">4). Continued ventilation with normal or slow heartrate</string>
    <string name="recognises_not_crying_gmv">ii). Recognises not crying</string>
    <string name="keep_warm_clears_airway_if_needed_gmv">iii). Keeps warm, clears airway if needed</string>
    <string name="stimulates_breathing_gmv">iv). Stimulates breathing</string>
    <string name="recognises_not_breathing_gmv">v). Recognises not breathing</string>
    <string name="follows_routine_for_when_to_clamp_or_ties_and_cut_the_rumblical">vi). Follows routine for when to clamp or tie and cut the rumblical</string>
    <string name="move_to_area_for_ventilation_stand_at_hand_check_mask_side">vii). Moves to area for ventilation stand at head, check mask side</string>
    <string name="ventilate_gmv">viii). Ventilate (by one minute )</string>
    <string name="recognises_chest_moving_not_moving_gmv">ix). Recognises chest moving/ not moving</string>
    <string name="recognises_breathing_well_gmv">x). Recognises breathing well</string>
    <string name="monitors_with_mother_gmv">xi). Monitors with mother</string>
    <string name="bathe_the_baby">A. Bathe the baby</string>
    <string name="deliver_the_placenta">B. Deliver the placenta</string>
    <string name="evaluate_the_heart_rate">C. Evaluate the heart rate</string>
    <string name="help_a_baby_if_neccesary">D. Help a baby breathe if necessary</string>
    <string name="quize_1">1. What should you do in The Golden Minute?</string>
    <string name="quize_2">2. To prepare the area for delivery</string>
    <string name="quiz_2_a">A. Open all the doors and windows to get fresh air</string>
    <string name="quiz_2_b">B. Darken the room</string>
    <string name="quiz_2_c">C. Make sure the area is clean, warm, and well-lighted</string>
    <string name="quiz_2_d">D. Keep the room temperature cold</string>
    <string name="quize_3">3. Which baby can receive routine care after birth?</string>
    <string name="quiz_3_a">A. A baby who is not breathing</string>
    <string name="quiz_3_b">B. A baby who is gasping</string>
    <string name="quiz_3_c">C. A baby who is crying and/or breathing well</string>
    <string name="quiz_3_d">D. A baby who is limp</string>
    <string name="quize_4">4. Routine care for a healthy baby at birth includes</string>
    <string name="quiz_4_a">A. Drying, removing the wet cloth, and bathing the baby</string>
    <string name="quiz_4_b">B. Drying, removing the wet cloth, and positioning the baby skin-to-skin</string>
    <string name="quiz_4_c">C. Bathing and putting clean clothes on the baby</string>
    <string name="quiz_4_d">D. Drying and wrapping the baby in the wet cloth</string>
    <string name="quize_5">5. A baby is quiet, limp and not breathing at birth. What should you do?</string>
    <string name="quiz_5_a">A. Dry the baby thoroughly</string>
    <string name="quiz_5_b">B. Shake the baby</string>
    <string name="quiz_5_c">C. Throw cold water on the face</string>
    <string name="quiz_5_d">D. Hold the baby upside down</string>
    <string name="quize_6">6. A newborn baby is quiet, limp and not crying. The baby does not respond to steps to stimulate breathing. What should you do next?</string>
    <string name="quiz_6_a">A. Slap the baby’s back</string>
    <string name="quiz_6_b">B. Hold the baby upside down</string>
    <string name="quiz_6_c">C. Squeeze the baby’s ribs</string>
    <string name="quiz_6_d">D. Begin ventilation</string>
</resources>